@@ -9,7 +9,7 @@ class SyntaxTest < Test::Unit::TestCase
     assert_equal(LDAP::Server::Syntax, s.class)
     assert_equal("Integer", s.desc)
     assert_equal("( 1.3.6.1.4.1.1466.115.121.1.27 DESC 'Integer' )", s.to_def)
-    assert(s.hr)
+    assert(!s.nhr)
     assert(s.match("123"))
     assert(!s.match("12A"))
     assert_equal(123, s.value_from_s("123"))
